--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sensio/framework-extra-bundle": "2.2.*",
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.3.*",
-        "jms/di-extra-bundle": "1.2.*"
+        "jms/di-extra-bundle": "1.2.*",
+        "friendsofsymfony/rest-bundle": "0.10.x-dev"
     },
     "scripts": {
         "post-install-cmd": [
